k8s/ingress/client-ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-ssl
spec:
  rules:
  - host: kspyrou.cloudns.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-clip 
            port: 
              number: 3000
  tls:
    - hosts: 
      - kspyrou.cloudns.cl
      secretName: tls-secret
